# Mini-ML

./: dune-project  mini_ml.opam
lib/: dune
test/: basic.ml  evenfunnier.ml  let_.ml  letin.ml  letincouples.ml  letincouples_mais_pire.ml  letsansin.ml  letsansin_mais_en_pire.ml  more_refs.ml  print.ml  yaydescouples.ml
test/identify/: alpha_conv.ml  global_env.ml  identity.ml  let_bind.ml  let_bind_bad.ml  local_env.ml  test.ml
test/parser/: alotoffun.ml  couple.ml  couplesimples.ml  de_tout_sans_letin.ml  func.ml  letfuncin.ml  letin_mais_en_pire.ml  letsyntaxerror.ml  morefunc.ml  refs.ml  sep.ml
